--- a/backend/BUILD
+++ b/backend/BUILD
@@ -3,8 +3,16 @@ load("@pip//:requirements.bzl", "requirement")
 
 py_binary(
     name = "backend",
-    srcs = ["src/main.py"],
+    srcs = ["backend.py"],
     deps = [
         requirement("flask"),
+        requirement("Werkzeug"),
+        requirement("Jinja2"),
+        requirement("itsdangerous"),
+        requirement("click"),
+        requirement("blinker"),
     ],
+    visibility = ["//visibility:public"],
 )
+
+exports_files(["requirements.txt", "requirements_lock.txt"])
