--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,13 @@
-flask==3.0.0
-
+blinker==1.9.0
+build==1.2.2.post1
+click==8.1.7
+Flask==3.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+packaging==24.2
+pip-tools==7.4.1
+pyproject_hooks==1.2.0
+setuptools==75.6.0
+Werkzeug==3.1.3
+wheel==0.45.1
